leetcode，回溯算法 解决组合问题. 如果每次递归的时候，子集都不需要剔除元素，那 startIndex 就是 i,不用 i + 1。